# helmet-detection

./: .gitignore
hardhat-wearing-detection/SSD-RPA/: Makefile.config
hardhat-wearing-detection/SSD-RPA/data/Hardhat/: create_data.sh  labelmap_hardhat_binary.prototxt
hardhat-wearing-detection/SSD-RPA/examples/Hardhat/: train_model.ipynb
hardhat-wearing-detection/SSD-RPA/examples/Hardhat/SSD300/: train_SSD300.sh
hardhat-wearing-detection/SSD-RPA/examples/Hardhat/SSD300_binary/: solver.prototxt  test.prototxt  train.prototxt  train_SSD300.sh
hardhat-wearing-detection/SSD-RPA/python/caffe/: draw.py
hardhat-wearing-detection/SSD-RPA/src/caffe/util/: math_functions.cpp
hardhat-wearing-detection/demo/: CMakeLists.txt  main.cpp  main_v2.cpp
hardhat-wearing-detection/sh/: install_caffe_prerequisites.sh  set_paths.sh  setup_for_helmet-detection.sh  sh_README.md
hardhat-wearing-detection/sh/replace_classes/: replace.sed  replace_classes.sh
hardhat-wearing-detection/sh/replace_classes/test_sed/: test_sed.txt
